# alquran-tui

./: Cargo.toml  README.md
src/: ayah.rs  get_ayah.rs  get_surah.rs  main.rs  surah.rs
